--- a/Tresor/Tresor.csproj
+++ b/Tresor/Tresor.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>fe4ddf7a-c9a8-4c9d-8701-c311b4b19438</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.2" />
+  </ItemGroup>
 
 </Project>
