--- a/.github/workflows/main_tresor-website.yml
+++ b/.github/workflows/main_tresor-website.yml
@@ -24,7 +24,8 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
+          cd tresor
+          npm run build
           npm run test --if-present
       
       - name: Upload artifact for deployment job
