--- a/.github/workflows/main_tresor-website.yml
+++ b/.github/workflows/main_tresor-website.yml
@@ -28,11 +28,17 @@ jobs:
           npm install
           npm run build
       
+      - name: Zip Release
+        uses: TheDoctor0/zip-release@0.6.1
+        with:
+          filename: release.zip
+          path: ./*
+      
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,5 +59,5 @@ jobs:
         with:
           app-name: 'tresor-website'
           slot-name: 'Production'
-          package: .
+          package: 'release.zip'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1C92083D74184357A686ABE2A4150FA4 }}
