--- a/.github/workflows/main_tresor-website.yml
+++ b/.github/workflows/main_tresor-website.yml
@@ -24,21 +24,14 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          cd tresor
-          npm install
-          npm run build
-      
-      - name: Zip Release
-        uses: TheDoctor0/zip-release@0.6.1
-        with:
-          filename: release.zip
-          path: ./*
+          npm run build --if-present
+          npm run test --if-present
       
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: release.zip
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,18 +39,18 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: node-app
-      
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'tresor-website'
           slot-name: 'Production'
-          package: 'release.zip'
+          package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_1C92083D74184357A686ABE2A4150FA4 }}
